# shotgate

./: .containerignore  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  GOVERNANCE.md  Jenkinsfile  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: pin-device.py  pull-base-image.sh
.github/workflows/: ci.yml  dockerhub-mirror.yml  hardware-validation.yml  pages.yml  pypi-smoke.yml  release.yml
docs/: README.md  architecture.md  assertions.md  docs.css  docs.js  getting-started.md  hardware-validation.md  index.html  motivation.md  pipeline.md  workflow-spec.md
docs/adr/: 0001-record-architecture-decisions.md  0002-statistical-validation-core.md  0003-container-and-vm-isolation.md  0004-rename-qforge-to-shotgate.md  0005-license-apache-2-0.md  0006-hardware-oracle-policy.md  0007-fail-closed-workflow-validation.md  0008-counts-based-oracle-expansion.md  0009-noise-model-simulation.md  0010-noise-aware-expected-distribution.md  0011-aws-braket-backend.md  0012-structural-oracles.md  0013-auto-calibrated-readout.md  0014-digital-twin-expected-distribution.md  0015-chi-square-simulator-only.md  0016-differential-oracle.md  0017-statistical-power-tooling.md  0018-oracle-catalog-consolidation.md  0019-braket-cloud-validation-scope.md
docs/diagrams/: architecture.mmd  pipeline.mmd
examples/bell-state/: workflow.yaml
examples/bell-state-braket/: workflow.yaml
examples/bell-state-differential/: bell.qasm  workflow.yaml
examples/bell-state-hardware/: workflow.yaml
examples/bell-state-hardware-oracle-coverage/: workflow.yaml
examples/bell-state-noisy-sim/: workflow.yaml
examples/bell-state-observables/: workflow.yaml
examples/bell-state-qasm3/: workflow.yaml
examples/bell-state-structural/: workflow.yaml
examples/ghz-state/: workflow.yaml
examples/ghz-state-hardware/: ghz.qasm  workflow.yaml
examples/grover-2q/: grover.qasm  workflow.yaml
examples/grover-2q-hardware/: workflow.yaml
examples/metamorphic-inverse/: circuit.qasm  workflow.yaml
infra/qemu/: README.md  create-runner-vm.sh
infra/qemu/cloud-init/: meta-data  user-data
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/examples/basic/: main.tf
js/: site.js
scripts/: demo.sh
src/qforge/: __init__.py  __main__.py  cli.py  config.py  report.py  runner.py  telemetry.py
src/qforge/backends/: __init__.py  base.py  ibm_runtime.py  local_aer.py  registry.py
src/qforge/circuits/: __init__.py  loader.py
src/qforge/validation/: __init__.py  assertions.py  metrics.py
src/shotgate/: __init__.py  __main__.py  cli.py  config.py  pytest_plugin.py  report.py  runner.py  telemetry.py
src/shotgate/backends/: __init__.py  base.py  braket.py  digital_twin.py  ibm_runtime.py  local_aer.py  registry.py
src/shotgate/circuits/: __init__.py  loader.py
src/shotgate/validation/: __init__.py  assertions.py  metrics.py
styles/: colors_and_type.css  components.css  fonts.css  site.css  styles.css
tests/: conftest.py  test_assertions.py  test_braket_backend.py  test_cli.py  test_config.py  test_ibm_backend.py  test_loader.py  test_metrics.py  test_pytest_plugin.py  test_report.py  test_runner_integration.py
