[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qforge"
version = "0.1.0"
description = "Container-native CI/CD quality gates for quantum circuits: statistically validate probabilistic output across simulators and QPUs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "qforge contributors" }]
keywords = [
  "quantum-computing", "devops", "ci-cd", "qiskit", "testing",
  "infrastructure-as-code", "quantum-devops", "statistical-testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Distributed Computing",
]

# The core (workflow parsing + statistical oracles + reporting) has a tiny,
# pure-Python dependency footprint so it can run in any container or CI runner.
# Heavy quantum SDKs are opt-in extras, imported lazily by their backends.
dependencies = [
  "pydantic>=2.5,<3",
  "pyyaml>=6.0",
  "click>=8.1",
  "rich>=13.0",
]

[project.optional-dependencies]
aer = ["qiskit>=1.2,<2", "qiskit-aer>=0.15"]
ibm = ["qiskit>=1.2,<2", "qiskit-ibm-runtime>=0.30"]
braket = ["amazon-braket-sdk>=1.80"]
mitigation = ["mitiq>=0.40"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML",
]
all = ["qforge[aer,ibm,braket,mitigation]"]

[project.urls]
Homepage = "https://github.com/your-org/qforge"
Documentation = "https://github.com/your-org/qforge/tree/main/docs"
Source = "https://github.com/your-org/qforge"
Issues = "https://github.com/your-org/qforge/issues"

[project.scripts]
qforge = "qforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qforge"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["B008"]  # click uses callables in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: tests that require a quantum SDK (qiskit/aer) installed",
]

[tool.mypy]
python_version = "3.10"
packages = ["qforge"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["qforge"]
