[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shotgate"
version = "0.2.1"
description = "Container-native CI/CD quality gates for quantum circuits: statistically validate probabilistic output across simulators and QPUs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "coldqubit", email = "info@coldqubit.org" }]
keywords = [
  "quantum-computing", "devops", "ci-cd", "qiskit", "testing",
  "infrastructure-as-code", "quantum-devops", "statistical-testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Distributed Computing",
]

# The core (workflow parsing + statistical oracles + reporting) has a tiny,
# pure-Python dependency footprint so it can run in any container or CI runner.
# Heavy quantum SDKs are opt-in extras, imported lazily by their backends.
dependencies = [
  "pydantic>=2.5,<3",
  "pyyaml>=6.0",
  "click>=8.1",
  "rich>=13.0",
]

[project.optional-dependencies]
aer = ["qiskit>=1.2,<3", "qiskit-aer>=0.15"]
ibm = ["qiskit>=1.2,<3", "qiskit-ibm-runtime>=0.30"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML",
]
# Everything with a working backend today. (Deliberately excludes the planned
# extras below, so `pip install shotgate[all]` never pulls deps for a backend
# that isn't implemented yet.)
all = ["shotgate[aer,ibm]"]

# Planned (roadmap): declared so the intended deps are documented, but NOT
# part of `all` and NOT yet wired to a backend. Installing these does nothing
# usable until the corresponding backend lands. See README roadmap.
braket = ["amazon-braket-sdk>=1.80"]      # planned: AWS Braket backend (v0.2+)
mitigation = ["mitiq>=0.40"]              # planned: error mitigation (v0.3)

[project.urls]
Homepage = "https://github.com/coldqubit/shotgate"
Documentation = "https://github.com/coldqubit/shotgate/tree/main/docs"
Source = "https://github.com/coldqubit/shotgate"
Issues = "https://github.com/coldqubit/shotgate/issues"

[project.scripts]
shotgate = "shotgate.cli:main"

[project.entry-points.pytest11]
shotgate = "shotgate.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/shotgate"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["B008"]  # click uses callables in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: tests that require a quantum SDK (qiskit/aer) installed",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
packages = ["shotgate"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["shotgate"]
